Fixed some aligns and some very weird padding rules

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,7 +39,7 @@
 }
 
 .bg-primary {
-    padding: 18px 0px 5px 15px;
+    padding: 18px 15px 5px 15px;
     opacity: 0.7;
     font-size: 18px;
     text-align: center;
